-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.0-beta1
-
None
-
-
c9eedbe0f387f33e5e455af03a795d2114528543 (qt-creator/qt-creator/4.13)
From https://codereview.qt-project.org/c/qt-creator/qt-creator/+/299798
They control the color of text inside the editor, not UI.
- resulted from
-
QTCREATORBUG-19624 Improve the Git log window
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24198 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
306494,5 | Git: Port colorful log to text colors | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |